--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ xcuserdata/
 !*.xcworkspace/contents.xcworkspacedata
 /*.gcno
 **/xcshareddata/WorkspaceSettings.xcsettings
+
+# Misc. #
+.DS_Store
